Update NewExample.java